samples/_failures_safe/1761432351_b820e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08fe1b8a.c: In function ‘main’:
./samples/SAFE/__tmp_08fe1b8a.c:138:5: error: expected expression at end of input
  138 |     if (count == 0)
      |     ^~
./samples/SAFE/__tmp_08fe1b8a.c:138:5: error: expected declaration or statement at end of input
